# xcmagg

./: .gitignore  agents.py  aggregators.py  bronze.py  cronos.py  db.py  engine.py  geo.py  gold.py  main.py  pyproject.toml  silver.py  update.sh
data/geo/: municipios_ibge.json
frontend/: .index.html.swp
frontend/css/: styles.css
frontend/html/: index.html
frontend/js/: script.js
public/: fuelplan.html  gearftp.html  index.html  robots.txt  script.js  sitemap.xml  style.css
scripts/: backfill_activesports_encoding.py  backfill_dedup_ticketsports.py  backfill_ticketbr_titles.py
