[project]
name = "xcmagg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "brotli>=1.1.0",
    "ipython>=9.5.0",
    "jsonlines>=4.0.0",
    "lxml>=6.0.2",
    "pdfplumber>=0.11.7",
    "requests>=2.32.5",
    "zstandard>=0.25.0",
]
