[project]
name = "xcmagg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "brotli>=1.1.0",
    "ipython>=9.5.0",
    "jsonlines>=4.0.0",
    "lxml>=6.0.2",
    "openai>=2.6.1",
    "pdfplumber>=0.11.7",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "validators>=0.35.0",
    "zstandard>=0.25.0",
]
